# scripts-and-builtins

./: .gitignore  Pipfile  README.md  cp.c  dd.c  dd_profile.c  server
ai_hw1/src/: Main.java  Main2.java  input.txt
bash/: 1.sh  2.sh  3.sh  4.sh
c/: .gitignore  CMakeLists.txt  dsa-main.cpp
c/2.1-os-course-labs/week01/: ex1.sh  ex1.txt  ex2.txt  home.txt  main.c
c/2.1-os-course-labs/week03/: ex1.c
c/2.1-os-course-labs/week04/: ex2.c  ex2.sh  ex3.txt  ex4.c  ex4.sh
c/2.1-os-course-labs/week06/: ex1.sh  ex2.sh
c/2.1-os-course-labs/week08/: ex4.c
c/2.1-os-course-labs/week11/: ex2.c  ex2.txt
c/dd/: dd.c
c/inter01/: main.c
c/intership-task/: Makefile  main.c
c/memory-make-test/: Makefile  exec  funcs.c  funcs.h  funcs2.h  main.c  single.c
c/memory-test/: a.c
c/proxy/: Makefile  lib_tcp.c  lib_tcp.h  main.c  utils.c  utils.h
c/proxy/assets/: default_resp.txt  svg_template.txt
c/proxy/client/: client.c
c/proxy/server/: server.c
c/rights_test_task/: Makefile  main.c
c/sockets-tcp/: client.c  server.c
c/sockets-udp/: server.c
dd/: .gitignore
encodings/: tests.py
go/: go.mod  main.go
hosts/: .gitignore  README.md  list.txt  my-hosts
python/: needed_grades_calculator.py
python/bookmarks-json/: main.py
python/encodings/: bin_funcs.py  key_raw
python/hosts/: convert.py
python/hse_hw_3318/: 2.ipynb  3.ipynb  res.ipynb
python/hw3318/: .gitignore  1.ipynb  1.py  2.py  3.py  arc.py  res.ipynb
python/id3/: fix_encoding.py
python/ml_hw1/: Assignment_1.ipynb  least_squares_method.py  lsm.py  main.py  main_lsm.py  matrices.py
(+244 files in other folders)
